# hydr__free_convection

./: CMakeLists.txt
src/: animation.cpp  animation.h  basicflow.cpp  basicflow.h  calculation.cpp  calculation.h  filereading.cpp  filereading.h  galerk_method.cpp  galerk_method.h  initialization.cpp  initialization.h  inputdata_by_file.cpp  inputdata_by_file.h  laguerre_polynomials.cpp  laguerre_polynomials.h  main.cpp  maindatastorage.cpp  maindatastorage.h  nachts_method.cpp  nachts_method.h  some_math.h  stabilitypoints.cpp  stabilitypoints.h  wide_output.cpp  wide_output.h
